feat: add file upload

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <tui-root>
-  <libs-shared-main-layout/>
+  <libs-shared-main-layout>
+    <lib-chat/>
+  </libs-shared-main-layout>
 <router-outlet />
 
 </tui-root>
