--- a/libs/shared/src/lib/layouts/main-layout.component.html
+++ b/libs/shared/src/lib/layouts/main-layout.component.html
@@ -4,9 +4,7 @@
     <lib-shared-side-menu/>
     <main class="main">
       <div class="main__container">
-        <h1>Написать автотесты</h1>
-        <p>Описание (загрузить файл, сгенерируются тест-кейсы)</p>
-        
+        <ng-content/>
       </div>
     </main>
   </div>
