--- a/libs/chat/src/lib/chat/chat.component.scss
+++ b/libs/chat/src/lib/chat/chat.component.scss
@@ -9,3 +9,37 @@
   margin-top: 30px;
   border: 1px solid;
 }
+
+.response {
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  border: 1px solid white;
+  padding: 30px;
+  margin-top: 30px;
+}
+
+.response h1 {
+  font-size: 2em;
+  margin-bottom: 0.5em;
+}
+
+.response p {
+  margin-bottom: 10px;
+}
+
+.response ul {
+  padding-left: 1.5em;
+  list-style-type: disc;
+}
+
+.loader {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  width: 100%;
+
+  span {
+    align-self: center;
+    font-size: 20px;
+  }
+}
