feat: add dockerfile

--- a/libs/auth/src/lib/auth/components/login/login.component.scss
+++ b/libs/auth/src/lib/auth/components/login/login.component.scss
@@ -3,6 +3,9 @@
   flex-direction: column;
   gap: 20px;
   width: 400px;
+  border: 1px solid #ffffff;
+  padding: 20px 30px;
+  border-radius: 32px;
 
   &__title {
     text-align: center;
