--- a/libs/shared/src/lib/UI/header/header.component.html
+++ b/libs/shared/src/lib/UI/header/header.component.html
@@ -11,7 +11,7 @@
       tuiDropdownOpen
       [style.margin-left]="'auto'"
       [style.cursor]="'pointer'"
-      src="https://www.nchti.ru/wp-content/images/profile-anonymous2.png"
+      src="https://td-betacom.ru/wp-content/uploads/2021/04/profile-anonymous2.png"
     />
     <ng-template #more let-close>
       <tui-data-list tuiDataListDropdownManager>
