--- a/libs/auth/src/lib/auth/auth.component.scss
+++ b/libs/auth/src/lib/auth/auth.component.scss
@@ -8,4 +8,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  &__title {
+    text-align: center;
+    color: #ffffff;
+    font-size: 24px;
+    margin-bottom: 30px;
+    margin-top: 0;
+  }
+
+  &__logo {
+    align-self: center;
+  }
 }
