feat: add download file

--- a/libs/chat/src/lib/chat/chat.component.html
+++ b/libs/chat/src/lib/chat/chat.component.html
@@ -70,6 +70,7 @@
       </span>
       </div>
     } @else if (htmlContent) {
+      <button tuiButton (click)="saveAsPdf()">Скачать</button>
       <div class="response" [innerHTML]="htmlContent"></div>
     }
   </ng-container>
