--- a/libs/chat/src/lib/chat/chat.component.scss
+++ b/libs/chat/src/lib/chat/chat.component.scss
@@ -11,6 +11,8 @@
 }
 
 .response {
+  background: #ffffff;
+  color: #000000;
   font-family: Arial, sans-serif;
   line-height: 1.6;
   border: 1px solid white;
