--- a/libs/auth/src/lib/auth/components/login/login.component.scss
+++ b/libs/auth/src/lib/auth/components/login/login.component.scss
@@ -1,19 +1,15 @@
+:host {
+  height: auto !important;
+}
+
 .login-form {
   display: flex;
   flex-direction: column;
   gap: 20px;
   width: 400px;
-
-  &__title {
-    text-align: center;
-    color: #ffffff;
-    font-size: 24px;
-    margin-bottom: 30px;
-  }
-
-  &__logo {
-    align-self: center;
-  }
+  border: 1px solid #ffffff;
+  padding: 20px 30px;
+  border-radius: 32px;
 
   &__message {
     color: #ffffff;
