--- a/libs/auth/src/lib/auth/components/login/login.component.html
+++ b/libs/auth/src/lib/auth/components/login/login.component.html
@@ -1,20 +1,19 @@
 <form [formGroup]="loginForm" class="login-form">
-  <div class="login-form__logo">
+  <div class="auth__logo">
     <svg width="90" height="90" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M34.9005 34.5999C31.5405 34.5999 28.4405 33.0199 26.4205 30.2399C25.9405 29.5799 26.0805 28.6399 26.7405 28.1399C27.4005 27.6399 28.3405 27.7998 28.8405 28.4598C30.3005 30.4398 32.5005 31.5798 34.9005 31.5798C39.0805 31.5798 42.5005 28.1799 42.5005 23.9799C42.5005 19.7799 39.1005 16.3799 34.9005 16.3799C32.0605 16.3799 29.3805 17.8998 27.9205 20.3198L22.6205 29.1399C20.6205 32.4799 16.9605 34.5399 13.0805 34.5399C7.24051 34.5399 2.48047 29.7798 2.48047 23.9398C2.48047 18.0998 7.24051 13.3398 13.0805 13.3398C16.4405 13.3398 19.5405 14.9198 21.5605 17.6998C22.0405 18.3598 21.9005 19.2999 21.2405 19.7999C20.5605 20.2799 19.6405 20.1399 19.1405 19.4799C17.6805 17.4999 15.4805 16.3599 13.0805 16.3599C8.90051 16.3599 5.48047 19.7598 5.48047 23.9598C5.48047 28.1598 8.88051 31.5599 13.0805 31.5599C15.9205 31.5599 18.6005 30.0399 20.0605 27.6199L25.3605 18.7999C27.3605 15.4599 31.0205 13.3999 34.9005 13.3999C40.7405 13.3999 45.5005 18.1599 45.5005 23.9999C45.5005 29.8399 40.7405 34.5999 34.9005 34.5999Z" fill="#8038E0"/>
     </svg>
   </div>
-  <h2 class="login-form__title">Авторизация</h2>
+  <h2 class="auth__title">Авторизация</h2>
   <tui-input
     tuiTextfieldSize="s"
-    formControlName="email"
+    formControlName="login"
     [tuiTextfieldCleaner]="true"
   >
-    Введите email
+    Введите логин
     <input
-      autocomplete="email"
       tuiTextfieldLegacy
-      type="email"
+      type="text"
     />
   </tui-input>
   <tui-input
@@ -29,7 +28,7 @@
       type="password"
     />
   </tui-input>
-  <button (click)="login()" tuiButton>
+  <button type="button" [loading]="isLoading$ | async" (click)="login()" tuiButton>
     Войти
   </button>
   <div class="login-form__message">
