--- a/libs/shared/src/lib/UI/side-menu/side-menu.component.html
+++ b/libs/shared/src/lib/UI/side-menu/side-menu.component.html
@@ -18,6 +18,7 @@
       [style.margin-left]="'10px'"
       [style.margin-right]="'10px'"
       [style.margin-top]="'20px'"
+      routerLink="/chat/new"
     >
       Новый запрос
     </button>
